This project is to be used with the *old* iRobot Create. Updated the ioioirobot.jar library and references to it.

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,17 @@
 buildscript {
     repositories {
         mavenCentral()
+        flatDir {
+                dirs 'lib' //this way we can find the .aar file in libs folder
+            }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.2'
     }
 }
 apply plugin: 'com.android.application'
+
+
 
 dependencies {
     compile fileTree(dir: 'lib', include: '*.jar')
